new commit test

--- a/index.html
+++ b/index.html
@@ -92,11 +92,10 @@
         </div>
         <div class="banner">
           <div class="cta">
-            <h2>Dynamic Learning Path</h2>
-            Create learning paths for _VOIS employees<br?>
-            This application is your guide to a dynamic learning path! Whether you are a developer wanting to learn a new technology or just improve and enhance your current skills or even someone wanting to join for the first time the fascinating world of software development, here you will find a comprehensive, easy to use, and powerful learning map of your area of interest.<br>
-            Choose your path and let's get started!<br?>
-            <input type="button" class="cta-btn" value="CTA">
+            <div><h1>Dynamic Learning Path</h1>
+            <div class="desc"><p>Create learning paths for _VOIS employees<br?>
+            Choose your path and let's get started!</p></div></div>
+            <div><input type="button" class="cta-btn" value="CTA"></div>
           </div>
           <div class="image"></div>
         </div>
@@ -114,19 +113,20 @@
         <div class="cards">
           <div class="title">
             <h6>Recently Added</h6>
-            <div class="h2 btn-link">
+            <div class="author btn-link">
               See All
               <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.7656 17.0573L17.8489 9.97396M17.8489 9.97396L10.7656 2.89062M17.8489 9.97396H2.22394" stroke="#BD0000" stroke-linecap="round"/>
               </svg>
               </div>
           </div>
-          <div class="card1">
+          <div id="card-row">
+          <div class="card card1">
             <div class="img1"></div>
             <div class="content">
-                <div class="h1">Public Cloud Developer</div>
-                <div class="h2">by Alexandru Balan</div>
-                <div class="desc">Become an experienced Cloud Developer that designs, builds, optimizes and maintains cloud-based solutions.</div>
+                <div class="card-title">Public Cloud Developer</div>
+                <div class="author">by Alexandru Balan</div>
+                <div class="desc"><p>Become an experienced Cloud Developer that designs, builds, optimizes and maintains cloud-based solutions.</p></div>
                 <div class="end h2">
                     <div class="btn-link">
                     Get Started
@@ -137,12 +137,12 @@
                 </div>
             </div>
           </div>
-          <div class="card2">
+          <div class="card card2">
             <div class="img2"></div>
             <div class="content">
-                <div class="h1">DevOps LP</div>
-                <div class="h2">by Alexandru Balan</div>
-                <div class="desc">DevOPS is not a DLP, but a never-ending process of continual development.</div>
+                <div class="card-title">DevOps LP</div>
+                <div class="author">by Alexandru Balan</div>
+                <div class="desc"><p>DevOPS is not a DLP, but a never-ending process of continual development.</p></div>
                 <div class="end h2">
                     <div class="btn-link">
                     Get Started
@@ -153,12 +153,12 @@
                 </div>
             </div>
           </div>
-          <div class="card3">
+          <div class="card card3">
             <div class="img3"></div>
             <div class="content">
-                <div class="h1">Public Cloud - DevOps</div>
-                <div class="h2">by Alexandru Balan</div>
-                <div class="desc">DevOPS engineer learning path.</div>
+                <div class="card-title">Public Cloud - DevOps</div>
+                <div class="author">by Alexandru Balan</div>
+                <div class="desc"><p>DevOPS engineer learning path.</p></div>
                 <div class="end h2">
                     <div class="btn-link">
                     Get Started
@@ -168,6 +168,7 @@
                     </div>      
                 </div>
             </div>
+          </div>
           </div>
         </div>
       </div>
