--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <link href="style.css" rel="stylesheet" />
-  <script type="module" src="script.js"></script>
+  <script type="module" src="nav.js"></script>
+  <script type="module" src="cards.js"></script>
 </head>
 
 <body>
@@ -30,8 +31,8 @@
             </defs>
           </svg>
         </div>
-        <div class="menu">
-          <div class="item active">
+        <div class="menu" id="menu">
+          <div class="item">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M14.7037 4.96875H19.0312V9.29625C19.0306 9.58258 18.9164 9.85696 18.7137 10.0592C18.511 10.2614 18.2363 10.375 17.95 10.375H14.7C14.4149 10.373 14.142 10.2586 13.9407 10.0566C13.7394 9.85465 13.626 9.5814 13.625 9.29625V6.04625C13.626 5.76057 13.74 5.48689 13.9421 5.28499C14.1443 5.0831 14.4181 4.96941 14.7037 4.96875Z"
