--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
   <link href="style.css" rel="stylesheet" />
-  <script type="module" src="nav.js"></script>
-  <script type="module" src="cards.js"></script>
 </head>
 
 <body>
@@ -132,7 +130,7 @@
     <div class="dashboard">
       <div class="header">Dashboard</div>
       <div class="search-bar">
-        <input class="search" type="text" placeholder="Search...">
+        <input class="search" type="text" id="search" placeholder="Search...">
       </div>
       <div class="banner">
         <div class="cta">
@@ -223,6 +221,7 @@
     </div>
   </div>
   </div>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
